components/base/nexus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nexus
  labels:
    app: nexus
spec:
  ports:
    - name: http
      port: 9000
      targetPort: 9000
    - name: metrics
      port: 9002
      targetPort: 9002
  selector:
    app: nexus
